# rust-mp4-memory

./: .gitignore  AI_INTELLIGENCE_FEATURES.md  BACKGROUND_INDEXING.md  CHANGELOG.md  Cargo.toml  FOLDER_PROCESSING.md  INCREMENTAL_VIDEO_BUILDING.md  PERFORMANCE_FIXES.md  PERFORMANCE_IMPROVEMENTS.md  QR_SIZE_OPTIMIZATION.md  README.md  TEMPORAL_ANALYSIS_FEATURES.md  WEB_PLATFORM_FEATURES.md  extracted_frame0.txt  test_performance.py
examples/: ai_intelligence_demo.rs  background_indexing_demo.rs  basic_usage.rs  comprehensive_demo.rs  data_demo.rs  demo.rs  folder_demo.rs  incremental_video_demo.rs  pdf_chat.rs  qr_size_test.rs  temporal_analysis_demo.rs  test_ai_features.rs  web_platform_demo.rs
src/: analytics_dashboard.rs  background_indexing.rs  chat.rs  concept_extractors.rs  config.rs  content_synthesis.rs  data.rs  embeddings.rs  encoder.rs  error.rs  folder.rs  index.rs  knowledge_graph.rs  lib.rs  main.rs  memory_diff.rs  multi_memory.rs  qr.rs  relationship_analyzers.rs  retriever.rs  temporal_analysis.rs  text.rs  utils.rs  video.rs  web_server.rs
tests/: data_processing_tests.rs  folder_processing_tests.rs  performance_test.rs  web_platform_integration_test.rs
web/static/css/: main.css
web/static/js/: main.js
web/templates/: analytics.html  dashboard.html  index.html  memories.html  search.html
